tdf#97591: mark RTF clipboard format as text/rtf

text/rtf replaces text/richtext which is not RTF

Reviewed-on: https://gerrit.libreoffice.org/23086
Reviewed-by: Oliver Specht <oliver.specht@cib.de>
Tested-by: Oliver Specht <oliver.specht@cib.de>
(cherry picked from commit 36bf13247b01075b533b127c7e5ffc760f9642f8)

Change-Id: I2be750b595ba23ed75698b68c0d4ffd8f3a12870